--- a/index.html
+++ b/index.html
@@ -52,25 +52,19 @@
 
         <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
         <!-- <link rel="stylesheet" href="./css/style.min.css" type="text/css" media="all" /> -->
-        <link rel="stylesheet" href="./css/style.css?v=20180301225900" type="text/css" media="all" />
+        <link rel="stylesheet" href="./css/style.min.css?v=20180301235000" type="text/css" media="all" />
         <!-- <link rel="stylesheet" href="css/overlay2.css?v=1.0"> -->
         <!--[if (gt IE 6)&(lt IE 9)]><link rel="stylesheet" href="./css/style.min.css" type="text/css" media="all" /><![endif]-->
 
     </head>
     <body spellcheck="false">
-        <div id="horizon">
-            <div id="content">
-                <div class="bodytext">
-                    <span class="style18">
-                        <span class="style3">
-                            <div class="center-div">
-                                <object id="sp" type="image/svg+xml" data="./assets/LCGM-Cravat-Web-BW.svg">OB RPA LAB</object>
-                            </div>
-                        </span>
-                    </span>
+        <div class="container">
+            <div class="main">
+                <!--https://gist.github.com/matthewcrist/3701206-->
+                <div class="center-div">
+                    <object id="sp" type="image/svg+xml" data="./assets/LCGM-Cravat-Web-BW.svg">Le Chef Garde-Manger</object>
                 </div>
             </div>
         </div>
-
     </body>
 </html>
